# pystreamliner

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml  streamliner.py  test_messy.py
.github/workflows/: main.yml  publish.yml
