[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pystreamliner"
version = "1.11"
authors = [{ name = "Supe232323" }]
description = "Automatically clean up messy Python files without breaking anything using AST analysis."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Supe232323/pystreamliner"

[project.scripts]
pystreamliner = "streamliner:main"

[tool.setuptools]
# Force only this module, disable everything else
py-modules = ["streamliner"]
packages = []
zip-safe = false

[tool.setuptools.package-find]
where = ["."]
namespaces = false
include = ["streamliner*"]
exclude = ["test*", "tests*", "test_messy*", "*test*", "build*", "dist*", "__pycache__*"]
